# sep-to-epub

./: DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
src/sep_to_ebook/: __init__.py  builder.py  cli.py  epub.py  sep.py
src/sep_to_ebook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_sep.py
