[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sep-to-ebook"
version = "0.1.0"
description = "Fetch Stanford Encyclopedia of Philosophy entries and package them as EPUB."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "latex2mathml>=3.81,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
